--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "expo": "~48.0.9",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.4",
-    "react-native-progress": "^5.0.0",
-    "@react-native-async-storage/async-storage": "1.17.11",
-    "react-native-maps": "1.3.2"
+    "react-native-callout": "^0.0.8",
+    "react-native-maps": "1.3.2",
+    "react-native-progress": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
